[package]
name = "dankexotic"
version = "0.1.0"
edition = "2018"

[features]
no-entrypoint = []

[dependencies]
arrayref = "0.3.6"
num-derive = "0.3"
num-traits = "0.2"
num_enum = "0.5.4"
solana-program = "1.7.11"
thiserror = "1.0"

[dev-dependencies]
solana-sdk = "1.7.11"

[lib]
name = "dankexotic"
crate-type = ["cdylib", "lib"]
